server sidebar UI done

--- a/index.html
+++ b/index.html
@@ -35,9 +35,26 @@
         >
           TSAD
         </a>
-        <a href="#" class="server" data-active-toggle="server"> TNS </a>
+        <a href="#" class="server" data-active-toggle="server">TNS</a>
+      </div>
+
+      <!-- Channels section-->
+      <div class="channels-sidebar-header outline-inset">
+        Hiking Lovers
+        <svg class="chevron">
+          <use href="#svg-chevron" />
+        </svg>
       </div>
     </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+      <symbol id="svg-chevron" fill="none" viewBox="0 0 24 24">
+        <path
+          fill="currentColor"
+          d="M5.3 9.3a1 1 0 0 1 1.4 0l5.3 5.29 5.3-5.3a1 1 0 1 1 1.4 1.42l-6 6a1 1 0 0 1-1.4 0l-6-6a1 1 0 0 1 0-1.42Z"
+        ></path>
+      </symbol>
+    </svg>
     <script src="./script.js"></script>
   </body>
 </html>
